--- a/src/work/components/WorkAddModel.scss
+++ b/src/work/components/WorkAddModel.scss
@@ -1,5 +1,12 @@
+.work-addmodel {
+        .ant-modal-body {
+            padding: 0 !important;
+        }
+
+}
+
 .work-addmodel-close-cinfirm {
-    .ant-modal-content{
+    .ant-modal-content {
         padding: 20px 0;
     }
 }
