--- a/src/common/styles/_color.scss
+++ b/src/common/styles/_color.scss
@@ -27,7 +27,7 @@ $form-input-color: #e3e8f07d;
 :root {
     --thoughtware-white: #fff;  
     --thoughtware-black: #000;
-    --thoughtware-blue: #5d70ea;
+    --thoughtware-blue: #0D66E4;
     --thoughtware-gray-200: #ececec;
     --thoughtware-gray-300: #EDF0F5;
     --thoughtware-gray-400: #e3e8f0;
