--- a/src/common/styles/_index.scss
+++ b/src/common/styles/_index.scss
@@ -41,9 +41,10 @@
 }
 .ant-table-thead>tr>th {
     background: #fff; 
-    font-weight: 400;
+    font-weight: 600;
     padding: 8px;
-    
+    color: #666;
+    font-size: 12px;
 }
 .ant-table table {
     border-bottom: 1px solid #f0f0f0;
@@ -125,11 +126,23 @@
     }
 }
 .ant-form-item {
-    margin: 0 0 15px;
+    margin: 0 0 20px;
 }
 .ant-form-item-explain {
     font-size: 13px;
 }
+
+.ant-form-item-label {
+    font-size: 12px;
+    font-weight: 600;
+    
+}
+
+.ant-form-item-label>label {
+    color: #666;
+    font-size: 12px;
+}
+
 .ant-form-item-label>label.ant-form-item-required:not(.ant-form-item-required-mark-optional):after {
     display: inline-block;
     margin-right: 4px;
