--- a/src/work/components/WorkBasicInfo.scss
+++ b/src/work/components/WorkBasicInfo.scss
@@ -194,6 +194,7 @@
             .ant-form-item-label>label {
                 color: var(--thoughtware-gray-500);
                 font-size: 13px;
+                font-weight: normal;
             }
 
             .ant-upload-select-text {
