--- a/src/work/components/WorkRelation.scss
+++ b/src/work/components/WorkRelation.scss
@@ -24,10 +24,10 @@
         background: #fff;
         border-radius: 4px;
         position: relative;
-        height: calc(100% - 100px);
+        height: calc(100% - 82px);
         .ant-table {
             overflow: auto;
-            max-height: calc(100% - 100px);
+            // max-height: calc(100% - 100px);
             border-top: 1px solid #f0f0f0;
             border-bottom: 1px solid #f0f0f0;
         }
