--- a/src/work/components/WorkDetailBottom.scss
+++ b/src/work/components/WorkDetailBottom.scss
@@ -1,81 +1,8 @@
-.workitem-tab {
-    height: 100%;
-
-    .workitem-detail-row {
-        // height: calc(100% - 60px);
-        // overflow: auto;
-        background: #fff;
-        margin: 20px 0;
-        padding: 0 15px;
-    }
-
-    .workitem-tabs {
-        display: flex;
-        gap: 32px;
-        height: 32px;
-        line-height: 32px;
-        border-bottom: 1px solid var(--thoughtware-gray-200);
-        padding: 0 15px;
-        .tabs-bar-num {
-            font-size: 12px;
-            padding-left: 3px;
-            color: #999;
-        }
-        .tabs-bar-select {
-            border-bottom: 2px solid var(--thoughtware-blue);
-            color: var(--thoughtware-blue);
-        }
-
-        .tabs-bar {
-            cursor: pointer;
-        }
-
-        .tabs-more {
-            position: relative;
-
-            .tabs-more-button {
-                height: 32px;
-                line-height: 32px;
-                display: flex;
-                align-items: center;
-                cursor: pointer;
-            }
-
-            .tabs-dropdown {
-                position: absolute;
-                background-color: #fff;
-                z-index: 3;
-                width: fit-content;
-                border-radius: 5px;
-                box-shadow: 0 3px 6px -4px rgb(0 0 0 / 12%), 0 6px 16px rgb(0 0 0 / 8%), 0 9px 28px 8px rgb(0 0 0 / 5%);
-
-                .tabs-dropdown-item {
-                    padding: 0 20px;
-                    height: 40px;
-                    line-height: 40px;
-                    white-space: nowrap;
-                    cursor: pointer;
-                }
-
-                .tabs-dropdown-item:hover {
-                    background-color: var(--thoughtware-gray-300);
-                }
-
-                .tabs-dropdown-select {
-                    background-color: var(--thoughtware-gray-400);
-                }
-            }
-
-            .tabs-dropdown-show {
-                display: block;
-            }
-
-            .tabs-dropdown-hidden {
-                display: none;
-            }
-        }
-    }
-
+.workitem-detail-row {
+    // height: calc(100% - 32px);
+    // overflow: auto;
+    background: #fff;
+    padding: 20px 15px;
     .workitem-tabs-content {
         .detail-top {
             display: flex;
@@ -233,3 +160,7 @@
         }
     }
 }
+// .workitem-detail-row::-webkit-scrollbar {
+//     width: 0 !important;
+//     height: 0 !important;
+// }
