--- a/src/project/setting/basicInfo/components/BasicInfo.scss
+++ b/src/project/setting/basicInfo/components/BasicInfo.scss
@@ -64,6 +64,7 @@
         display: flex;
         align-items: center;
         flex-wrap: wrap;
+        gap: 10px;
         .project-icon {
             margin-right: 10px;
             box-sizing: content-box;
