--- a/src/sprint/common/components/SprintChangeModal.scss
+++ b/src/sprint/common/components/SprintChangeModal.scss
@@ -38,6 +38,7 @@
         width: 100%;
         align-items: center;
         padding: 10px 22px;
+        cursor: pointer;
         .sprint-aside-icon {
             width: 15px;
             height: 15px;
