--- a/src/version/common/components/VersionChangeModal.scss
+++ b/src/version/common/components/VersionChangeModal.scss
@@ -39,6 +39,7 @@
         width: 100%;
         align-items: center;
         padding: 10px 22px;
+        cursor: pointer;
         .version-aside-icon {
             width: 15px;
             height: 15px;
