--- a/src/project/project/components/ProjectAddInfo.scss
+++ b/src/project/project/components/ProjectAddInfo.scss
@@ -60,7 +60,7 @@
         display: flex;
         align-items: center;
         flex-wrap: wrap;
-
+        gap: 10px;
         .upload-icon {
             width: 30px;
             height: 30px;
