--- a/src/setting/workSeting/components/WorkType.scss
+++ b/src/setting/workSeting/components/WorkType.scss
@@ -4,20 +4,16 @@
         display: flex;
         align-items: center;
         flex-wrap: wrap;
+        gap: 10px;
         .upload-icon {
             width: 30px;
             height: 30px;
         }
-    }
-    .work-type-icon {
-        margin-right: 10px;
-        box-sizing: content-box;
-        
-        img {
-            width: 32px;
-            height: 32px;
+        .work-type-icon {
+            box-sizing: content-box;
         }
     }
+   
     .icon-select {
         border: 2px solid #b4fab7;
     }
