--- a/src/work/components/WorkChild.scss
+++ b/src/work/components/WorkChild.scss
@@ -9,6 +9,15 @@
     .work-title {
         color: var(--thoughtware-blue);
         cursor: pointer;
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        .work-name {
+            text-overflow: ellipsis;
+            white-space: nowrap;
+            overflow: hidden;
+            width: 300px;
+        }
     }
     .child-create-input {
         height: 35px;
@@ -44,7 +53,24 @@
         }
     }
 
+    .work-status {
+        padding: 2px 3px;
+        background: #e2e1e4;
+        border-radius: 4px;
+        font-size: 10px;
+        width: fit-content;
+        color: #2b333e;
+    }
 
+    .work-status-process {
+        background: #b0d5dfa1;
+        color: #132c33;
+    }
+
+    .work-status-done {
+        background: #dfecd5e3;
+        color: #5e5314;
+    }
 
     .child-top-title {
         font-size: 16px;
@@ -62,6 +88,11 @@
             overflow: auto;
             // max-height: calc(100% - 100px);
             border-top: 1px solid #f0f0f0;
+            .ant-table-tbody>tr>td {
+                text-overflow: ellipsis;
+                white-space: nowrap;
+                overflow: hidden;
+            }
         }
     }
 }
