--- a/src/project/stage/component/StagelineMap.scss
+++ b/src/project/stage/component/StagelineMap.scss
@@ -23,61 +23,79 @@
         }
 
         .time-table {
-            border-bottom: 1px solid #E6EDFA;
+            border-bottom: 1px solid #fafafa;
             text-align: center;
             overflow: hidden;
             position: relative;
             height: 100%;
             flex: 1;
-
+    
             .table-border {
-                border-bottom: 1px solid #E6EDFA;
+                border-bottom: 1px solid #fafafa;
                 height: 50px;
                 line-height: 50px;
             }
-
+    
             .table-hearder {
                 display: flex;
                 justify-content: space-between;
                 align-items: center;
                 height: 50px;
-                background-color: #E6EDFA;
+                background-color: #fafafa;
                 overflow: hidden;
-                text-overflow: ellipsis;
                 font-weight: var(--thoughtware-font-weight-bold);
                 position: relative;
                 top: 0;
-
+    
                 .table-hearder-gatter {
-                    width: 1000px;
+                    flex: 1;
                     height: 50px;
-                    border-left: 1px solid var(--thoughtware-gray);
+    
                     font-weight: var(--thoughtware-font-weight-bold);
                     overflow: auto;
                 }
-
+    
                 .table-hearder-gatter::-webkit-scrollbar {
                     width: 0 !important;
                     height: 0 !important;
                 }
-
+    
                 .table-hearder-gatter {
                     -ms-overflow-style: none;
                     overflow: -moz-scrollbars-none;
                 }
-
+    
                 .table-hearder-text {
                     height: 50px;
-                    flex: 1;
+                    text-align: left;
+                    padding-left: 15px;
                 }
-
+    
+                .table-hearder-title {
+                    width: 300px;
+                }
+    
+                .table-hearder-status {
+                    width: 60px;
+                }
+    
+                .table-hearder-assigner {
+                    width: 90px;
+                    border-right: 1px solid var(--thoughtware-gray);
+                }
+    
+                .table-hearder-time {
+                    width: 250px;
+                    border-right: 1px solid var(--thoughtware-gray);
+                }
+    
                 .table-timer {
                     .table-month {
                         height: 25px;
                         line-height: 25px;
-                        background-color: #E6EDFA;
+                        background-color: #fafafa;
                         display: inline-flex;
-
+    
                         .table-month-td {
                             border-right: solid #fff 1px;
                             font-size: 12px;
@@ -85,39 +103,45 @@
                         }
                     }
                 }
-
+    
                 .table-date {
                     height: 25px;
                     display: inline-flex;
                     text-align: center;
                     border-bottom: 1px solid var(--thoughtware-gray);
                     line-height: 25px;
+    
+                    .table-weekday {
+                        border-right: 1px solid #fff;
+                        box-sizing: border-box;
+                    }
                 }
-
+    
                 .table-day {
-                    border-right: #E6EDFA solid 1px;
                     font-size: 12px;
                 }
+    
+                .table-week {
+                    background-color: #f0f0f0;
+                }
             }
-
+    
             .table-hidden {
                 display: none;
             }
-
+    
             .table-tr {
                 display: flex;
                 justify-content: space-between;
                 align-items: center;
                 height: 50px;
-
+    
                 .table-td {
                     height: 50px;
-                    flex: 1;
                     position: relative;
-                    overflow: hidden;
-                    text-overflow: ellipsis;
-                    white-space: nowrap;
-
+                    padding-left: 15px;
+                    text-align: left;
+    
                     .table-icon {
                         display: inline-block;
                         position: absolute;
@@ -125,71 +149,160 @@
                         top: 18px;
                     }
                 }
-
+    
+                .table-td-name {
+                    width: 300px;
+                    overflow: hidden;
+                    text-overflow: ellipsis;
+                    white-space: nowrap;
+    
+                    display: flex;
+                    align-items: center;
+    
+                }
+    
+                .table-td-status {
+                    width: 60px;
+                }
+    
+                .table-td-assigner {
+                    width: 90px;
+                    overflow: hidden;
+                    white-space: nowrap;
+                    text-overflow: ellipsis;
+                    border-right: #f0f0f0 1px solid;
+                }
+    
+                .table-td-time {
+                    width: 250px;
+                    border-right: #f0f0f0 1px solid;
+                    box-sizing: border-box;
+                }
+    
                 .table-gatter {
-                    width: 1000px;
+                    flex: 1;
                 }
             }
-
+    
             .table-body {
                 max-height: calc(100% - 50px);
                 overflow-y: hidden;
-
-                ul:nth-child(2n+0) {
+    
+                .table-grey {
                     background: #f7f7f7;
                 }
+    
+                // ul:nth-child(2n+0) {
+                //     
+                // }
             }
-
+    
             .table-pic::-webkit-scrollbar {
                 width: 0 !important;
                 height: 0 !important;
             }
-
+    
             .table-pic {
                 -ms-overflow-style: none;
                 overflow: -moz-scrollbars-none;
             }
-
+    
             .table-pic {
                 position: absolute;
                 top: 50px;
                 right: 0;
-                width: 1000px;
+                width: calc(100% - 450px);
                 max-height: calc(100% - 50px);
                 overflow-x: auto;
                 overflow-y: hidden;
-
+    
+                .table-date-background {
+                    // display: flex;
+                    position: absolute;
+                    height: 100%;
+                    top: 0;
+                    left: 0;
+                    display: inline-flex;
+                    text-align: center;
+    
+                    // line-height: 25px;
+                    .table-weekday {
+                        border-right: 1px solid #f0f0f0;
+                        box-sizing: border-box;
+                    }
+    
+                    .table-month {
+                        border-right: 1px solid #f0f0f0;
+                    }
+                }
+    
                 .table-overflow {
                     overflow: auto;
                 }
-
+    
                 .table-day {
-                    border-right: #d0e5f2 solid 1px;
+                    border-right: #fafafa solid 1px;
                 }
-
+    
                 .table-timer {
                     .table-month {
                         height: 25px;
                         line-height: 25px;
                         background-color: #d0e5f2;
                         display: inline-flex;
-
+    
                         .table-month-td {
                             border-right: solid #fff 1px;
                         }
                     }
                 }
-
+    
                 .table-overflow {
                     height: 100%;
-
+    
                     .gantt-box {
                         height: calc(100% - 50px) !important;
                     }
                 }
             }
+    
+    
+        }
 
-
+        .stage-name {
+            cursor: pointer;
+            display: flex;
+            align-items: center;
+            // justify-content: space-between;
+            // padding: 0 20px;
+            .stage-name-left {
+                display: flex;
+                align-items: center;
+            }
+            .stage-name-left-name:hover {
+                color: var(--thoughtware-blue);
+            }
+            .add-child-stage {
+                height: 18px;
+                width: 18px;
+                border-radius: 4px;
+                padding: 3px;
+                margin-right: 5px;
+                .add-icon {
+                
+                    display: none;
+                    width: 12px;
+                    height: 12px;
+                    
+                }
+            }
+            
+        }
+        .stage-name:hover .add-child-stage {
+            background-color: var(--thoughtware-gray-400);
+        }
+        .stage-name:hover .add-icon {
+            display: block;
         }
     }
 
@@ -214,7 +327,7 @@
         margin-top: 20px;
 
         .scroll-box {
-            width: 1000px;
+            width: calc(100% - 450px);
             height: 10px;
             background-color: #f5f5f5;
             border-radius: 4px;
