--- a/src/common/styles/_color.scss
+++ b/src/common/styles/_color.scss
@@ -91,7 +91,10 @@ $form-input-color: #e3e8f07d;
     width: 25px;
     height: 25px;
 }
-
+.icon-12 {
+    width: 12px;
+    height: 12px;
+}
 .icon-32 {
     width: 32px;
     height: 32px;
