--- a/src/project/stage/component/StageDetail.scss
+++ b/src/project/stage/component/StageDetail.scss
@@ -16,6 +16,7 @@
         .stage-name {
             font-size: 18px;
             font-weight: var(--thoughtware-font-weight-bold);
+            gap: 5px;
         }
         .stage-name:hover {
             min-width: fit-content;
