--- a/src/work/components/WorkTable.scss
+++ b/src/work/components/WorkTable.scss
@@ -13,6 +13,7 @@
             display: flex;
             align-items: center;
             height: 50px;
+            width: 200px;
         }
 
         .ant-table-thead {
