--- a/src/project/lineMap/component/Epic.scss
+++ b/src/project/lineMap/component/Epic.scss
@@ -1,5 +1,8 @@
 .epic {
     margin-top: 15px;
+    .ant-empty {
+        margin-top: 20%;
+    }
     .epic-action {
         display: flex;
         justify-content: space-between;
