--- a/src/project/lineMap/component/SprintPage.scss
+++ b/src/project/lineMap/component/SprintPage.scss
@@ -1,5 +1,8 @@
 .sprint {
     margin-top: 15px;
+    .ant-empty {
+        margin-top: 20%;
+    }
     .sprint-today {
         height: 32px;
         line-height: 32px;
