--- a/src/project/lineMap/component/VersionPage.scss
+++ b/src/project/lineMap/component/VersionPage.scss
@@ -1,6 +1,8 @@
 .version {
     margin-top: 15px;
-
+    .ant-empty {
+        margin-top: 20%;
+    }
     .version-today {
         height: 32px;
         line-height: 32px;
