--- a/src/work/components/WorkDeleteSelectModal.scss
+++ b/src/work/components/WorkDeleteSelectModal.scss
@@ -1,6 +1,6 @@
 .delete-button-group {
-    display: flex;
-    gap: 10px;
-    justify-content: flex-end;
+    // display: flex;
+    // gap: 10px;
+    // justify-content: flex-end;
     padding: 20px 0;
 }
