接入平台组件

--- a/src/project/stage/component/StagelineMap.scss
+++ b/src/project/stage/component/StagelineMap.scss
@@ -301,6 +301,12 @@
             .stage-name-left-name:hover {
                 color: var(--thoughtware-blue);
             }
+            .stage-key:hover {
+                color: var(--thoughtware-blue);
+            }
+            .stage-text:hover {
+                color: var(--thoughtware-blue);
+            }
             .add-child-stage {
                 height: 18px;
                 width: 18px;
