--- a/src/work/components/WorkChildAdd.scss
+++ b/src/work/components/WorkChildAdd.scss
@@ -11,6 +11,7 @@
         box-shadow: 0 3px 6px -4px rgb(0 0 0 / 12%), 0 6px 16px rgb(0 0 0 / 8%), 0 9px 28px 8px rgb(0 0 0 / 5%);
         background: #fff;
         height: 100%;
+        border-radius: 5px;
     }
 
     .child-add-search {
