--- a/src/work/components/WorkRelationAdd.scss
+++ b/src/work/components/WorkRelationAdd.scss
@@ -12,6 +12,7 @@
         box-shadow: 0 3px 6px -4px rgb(0 0 0 / 12%), 0 6px 16px rgb(0 0 0 / 8%), 0 9px 28px 8px rgb(0 0 0 / 5%);
         background: #fff;
         height: 100%;
+        border-radius: 5px;
         .relation-add-table-title {
             height: 30px;
             line-height: 30px;
