--- a/src/home/insight/components/ProjectSetMember.scss
+++ b/src/home/insight/components/ProjectSetMember.scss
@@ -23,7 +23,7 @@
     .projectset-user-content {
         width: 100%;
         height: calc(100% - 74px);
-        .projectset-user-warning {
+        .delete-warning {
             font-weight: 600;
             margin: 30% 20px
         }
