--- a/src/home/insight/components/ProjectSetWorkItem.scss
+++ b/src/home/insight/components/ProjectSetWorkItem.scss
@@ -23,5 +23,9 @@
     .project-workitem-content {
         width: 100%;
         height: calc(100% - 74px);
+        .delete-warning {
+            font-weight: 600;
+            margin: 30% 20px
+        }
     }
 }
