--- a/src/work/components/WorkLog.scss
+++ b/src/work/components/WorkLog.scss
@@ -2,7 +2,7 @@
     .worklog-top {
         display: flex;
         justify-content: space-between;
-
+        align-items: center;
         .worklog-top-title {
             font-size: 16px;
             font-weight: 600;
@@ -102,7 +102,7 @@
         justify-content: space-between;
         gap: 20px;
         .log-static-item {
-            width: 80px;
+            flex: 1;
             .log-static-item-title {
                 height: 40px;
                 line-height: 40px;
@@ -113,13 +113,14 @@
                 height: 40px;
                 line-height: 40px;
                 .unit {
-                    font-size: 13px;
-                    font-weight: 500;
+                    font-size: 12px;
+                    font-weight: normal;
                 }
             }
         }
         .log-static-progress {
-            flex: 1;
+            flex: 1.5;
+            text-align: center;
             .log-static-item-title {
                 height: 40px;
                 line-height: 40px;
@@ -129,6 +130,28 @@
                 line-height: 40px;
                 display: flex;
                 align-items: center;
+            }
+            .log-percent {
+                display: flex;
+                justify-content: flex-start;
+                align-items: center;
+                height: 6px;
+                width: 100%;
+                background: #ebeef5;
+                border-radius: 10px;
+                
+                .log-percent-blue {
+                    height: 6px;
+                    background-color: var(--thoughtware-blue);
+                    border-top-left-radius: 6px;
+                    border-bottom-left-radius: 6px;
+                }
+                .log-percent-red {
+                    height: 6px;
+                    background-color: #ff0000;
+                    border-top-right-radius: 6px;
+                    border-bottom-right-radius: 6px;
+                }
             }
         }
     }
