--- a/src/common/deleteModal/deleteModal.scss
+++ b/src/common/deleteModal/deleteModal.scss
@@ -1,5 +1,5 @@
-.delete-modal {
-    .ant-modal-content {
-        padding: 24px;
-    }
-}
+// .delete-modal {
+//     .ant-modal-content {
+//         padding: 24px;
+//     }
+// }
