--- a/src/home/insight/components/ProjectOperateTable.scss
+++ b/src/home/insight/components/ProjectOperateTable.scss
@@ -76,4 +76,14 @@
     .ant-form {
         padding: 0 10px;
     }
+
+    .delete-warning {
+        font-weight: 600;
+        text-align: center;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 5px;
+        height: calc(100% - 74px);
+    }
 }
