--- a/src/home/insight/components/EndWorkItemTrend.scss
+++ b/src/home/insight/components/EndWorkItemTrend.scss
@@ -23,5 +23,14 @@
     .end-trend-content {
         width: 100%;
         height: calc(100% - 74px);
+        .delete-warning {
+            font-weight: 600;
+            text-align: center;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 5px;
+            height: 100%;
+        }
     }
 }
