--- a/src/home/insight/components/WorkItemStatusSituation.scss
+++ b/src/home/insight/components/WorkItemStatusSituation.scss
@@ -4,6 +4,7 @@
     border-radius: 4px;
     margin-bottom: 10px;
     height: 100%;
+    background-color: #fff;
     &-top {
         height: 40px;
         line-height: 40px;
@@ -18,6 +19,15 @@
             align-items: center;
             width: 100%;
         }
+    }
+    .delete-warning {
+        font-weight: 600;
+        text-align: center;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 5px;
+        height: 100%;
     }
     .workitem-situation-content {
         width: 100%;
