--- a/src/project/sprint/components/SprintList.scss
+++ b/src/project/sprint/components/SprintList.scss
@@ -1,105 +1,111 @@
-.project-sprint-list {
-    background-color: #fff;
-    height: 100vh;
-    padding: var(--thoughtware-padding);;
-    flex: 1;
-    .sprint-tabs {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        height: 50px;
-        line-height: 50px;
-        
-        .sprint-tab {
-            font-size: var(--thoughtware-font-13);;
-            cursor: pointer;
+.project-sprint {
+    .ant-row {
+        overflow: auto;
+    }
+    .project-sprint-list {
+        background-color: #fff;
+        height: calc(100vh - 60px);
+        padding: var(--thoughtware-padding);;
+        flex: 1;
+      
+        .sprint-tabs {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
             height: 50px;
             line-height: 50px;
-            margin-right: 20px;
-        }
-        .sprint-tab:last-child {
-            margin-right: 0;
-        }
-        .active-tabs {
-            color: #000;
-            border-bottom: var(--thoughtware-gray-400) 2px solid;
-        }
-    }
-
-    .sprint-filter {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        // height: 50px;
-        // line-height: 50px;
-        gap: 20px;
-        margin-bottom: 15px;
-        .vertical-bar {
-            width: 1px;
-            height: 15px;
-            background-color: #d7d7d7;
-            margin: 0 10px;
-        }
-        .active-tabs {
-            border-bottom: 2px solid var(--thoughtware-blue);
-        }
-        .filter-search {
-            width: 120px;
-            border-radius: 4px;; 
-        }
-        .sprint-filter-right {
-            display: flex;
-            align-items: center;
-            gap: 10px;
-            .select-content {
-                padding: 5px 10px;
-                background-color: var(--thoughtware-gray);
-                width: 100px;
+            
+            .sprint-tab {
+                font-size: var(--thoughtware-font-13);;
+                cursor: pointer;
+                height: 50px;
+                line-height: 50px;
+                margin-right: 20px;
+            }
+            .sprint-tab:last-child {
+                margin-right: 0;
+            }
+            .active-tabs {
+                color: #000;
+                border-bottom: var(--thoughtware-gray-400) 2px solid;
             }
         }
-    }
-    .sprint-botton {
-        display: flex;
-        .project-primary {
-            margin-right: 10px;
-        }
-    }
-    .sprint-box {
-        .sprint-name {
-            cursor: pointer;
-        }
-        .sprint-item {
+    
+        .sprint-filter {
             display: flex;
             align-items: center;
+            justify-content: space-between;
+            // height: 50px;
+            // line-height: 50px;
+            gap: 20px;
+            margin-bottom: 15px;
+            .vertical-bar {
+                width: 1px;
+                height: 15px;
+                background-color: #d7d7d7;
+                margin: 0 10px;
+            }
+            .active-tabs {
+                border-bottom: 2px solid var(--thoughtware-blue);
+            }
+            .filter-search {
+                width: 120px;
+                border-radius: 4px;; 
+            }
+            .sprint-filter-right {
+                display: flex;
+                align-items: center;
+                gap: 10px;
+                .select-content {
+                    padding: 5px 10px;
+                    background-color: var(--thoughtware-gray);
+                    width: 100px;
+                }
+            }
         }
-        .sprint-name:hover {
-            color: var(--thoughtware-blue);
+        .sprint-botton {
+            display: flex;
+            .project-primary {
+                margin-right: 10px;
+            }
         }
-        .sprint-status {
-            padding: 2px 3px;
-            background: #e2e1e4;
-            border-radius: 4px;
-            font-size: 10px;
-            width: fit-content;
-            color: #2b333e;
-        }
-        .sprint-status-todo {
-            background: #e2e1e4;
-            color: #2b333e;
-        }
-        .sprint-status-process{
-            background: #b0d5dfa1;
-            color: #132c33;
-        }
-        .sprint-status-done {
-            background: #dfecd5e3;
-            color: #5e5314;
-        }
-        .ant-pagination-simple .ant-pagination-simple-pager input {
-            user-select: none;
-            pointer-events: none;
-            padding: 0;
-            border: 0;
+        .sprint-box {
+            .sprint-name {
+                cursor: pointer;
+            }
+            .sprint-item {
+                display: flex;
+                align-items: center;
+            }
+            .sprint-name:hover {
+                color: var(--thoughtware-blue);
+            }
+            .sprint-status {
+                padding: 2px 3px;
+                background: #e2e1e4;
+                border-radius: 4px;
+                font-size: 10px;
+                width: fit-content;
+                color: #2b333e;
+            }
+            .sprint-status-todo {
+                background: #e2e1e4;
+                color: #2b333e;
+            }
+            .sprint-status-process{
+                background: #b0d5dfa1;
+                color: #132c33;
+            }
+            .sprint-status-done {
+                background: #dfecd5e3;
+                color: #5e5314;
+            }
+            .ant-pagination-simple .ant-pagination-simple-pager input {
+                user-select: none;
+                pointer-events: none;
+                padding: 0;
+                border: 0;
+            }
         }
     }
 }
