--- a/src/projectSet/overview/components/ProjectSetSurvey.scss
+++ b/src/projectSet/overview/components/ProjectSetSurvey.scss
@@ -44,6 +44,7 @@
                 justify-content: space-between;
                 align-items: center;
                 padding-bottom: 20px;
+                gap: 10px;
                 .projectSet-icon {
                     width: 32px;
                     height: 32px;
