修改付费功能

--- a/src/common/styles/_color.scss
+++ b/src/common/styles/_color.scss
@@ -95,6 +95,10 @@ $form-input-color: #e3e8f07d;
     width: 12px;
     height: 12px;
 }
+.icon-14 {
+    width: 12px;
+    height: 12px;
+}
 .icon-32 {
     width: 32px;
     height: 32px;
