--- a/src/project/lineMap/component/Epic.scss
+++ b/src/project/lineMap/component/Epic.scss
@@ -1,7 +1,7 @@
 .epic {
     margin-top: 15px;
     .ant-empty {
-        margin-top: 20%;
+        margin-top: 20px;
     }
     .epic-action {
         display: flex;
