--- a/src/project/lineMap/component/SprintPage.scss
+++ b/src/project/lineMap/component/SprintPage.scss
@@ -1,7 +1,7 @@
 .sprint {
     margin-top: 15px;
     .ant-empty {
-        margin-top: 20%;
+        margin-top: 20px;
     }
     .sprint-today {
         height: 32px;
