--- a/src/project/workLog/components/LogDetail.scss
+++ b/src/project/workLog/components/LogDetail.scss
@@ -4,6 +4,7 @@
     }
     .ant-drawer-content-wrapper {
         top: 48px;
+        height: calc(100% - 48px);
     }
     .work-log-static {
         display: flex;
