--- a/src/work/components/WorkChangeView.scss
+++ b/src/work/components/WorkChangeView.scss
@@ -38,7 +38,7 @@
         align-items: center;
         justify-content: space-between;
         padding-right: 20px;
-        color: #999;
+        // color: #999;
     }
     .dropdown-buy-item:hover {
         background-color: var(--thoughtware-gray-300);
