--- a/src/workLog/logView/components/LogDetail.scss
+++ b/src/workLog/logView/components/LogDetail.scss
@@ -1,6 +1,7 @@
 .log-detail-drawer {
     .ant-drawer-content-wrapper {
         top: 48px;
+        height: calc(100% - 48px);
     }
 }
 .log-detail {
