--- a/src/common/overviewComponent/DynamicItem.scss
+++ b/src/common/overviewComponent/DynamicItem.scss
@@ -50,6 +50,8 @@
                     line-height: 15px;
                     border-radius: 5px; 
                     margin: 0 10px;
+                    width: 44px;
+                    white-space: nowrap;
                 }
                 .dynamic-work-newValue {
                     padding: 5px 10px; 
@@ -58,6 +60,8 @@
                     line-height: 15px;
                     border-radius: 5px; 
                     margin: 0 10px;
+                    width: 56px;
+                    white-space: nowrap;
                 }
             }
         }
