--- a/src/common/select/Select.scss
+++ b/src/common/select/Select.scss
@@ -19,9 +19,6 @@
         width: 100%;
         height: 100%;
         justify-content: space-between;
-
-        
-
         .svg-icon {
             margin-right: 0;
         }
@@ -55,7 +52,6 @@
         width: 100%;
         border-radius: 4px;
         z-index: 3;
-        left: 0;
         margin-top: 3px;
         box-shadow: 0 3px 6px -4px rgb(0 0 0 / 12%), 0 6px 16px rgb(0 0 0 / 8%), 0 9px 28px 8px rgb(0 0 0 / 5%);
         .select-search-box {
@@ -111,7 +107,12 @@
             }
         }
     }
-
+    .select-dropdown-left {
+        left: 0;
+    }
+    .select-dropdown-right {
+        right: 0;
+    }
     .select-head {
         height: 40px;
         line-height: 40px;
