--- a/src/project/lineMap/component/VersionPage.scss
+++ b/src/project/lineMap/component/VersionPage.scss
@@ -1,7 +1,7 @@
 .version {
     margin-top: 15px;
     .ant-empty {
-        margin-top: 20%;
+        margin-top: 20px;
     }
     .version-today {
         height: 32px;
