--- a/src/project/milestone/components/MilestoneTimeline.scss
+++ b/src/project/milestone/components/MilestoneTimeline.scss
@@ -1,13 +1,35 @@
+.milestone-timeline::-webkit-scrollbar-thumb {
+    background: #fff;
+}
+
+.milestone-timeline:hover::-webkit-scrollbar-thumb {
+    background: #c4c5c6;
+    border-radius: 5px;
+}
+
+.milestone-timeline::-webkit-scrollbar {
+    width: 7px;
+    height: 5px;
+    background: #fff;
+    border-radius: 5px;
+}
+
+.milestone-timeline:hover::-webkit-scrollbar {
+    width: 7px;
+    height: 5px;
+    background: #f4f5f6;
+}
+
 .milestone-timeline {
     display: flex;
-
+    overflow-y: auto;
     .milestone-timeline-item {
         display: flex;
         flex-direction: column;
         align-items: center;
 
         .timeline-item-top {
-            height: 100px;
+            height: 80px;
             display: flex;
             justify-content: center;
             flex-direction: column;
