开发事项功能权限

--- a/src/setting/workSeting/components/WorkPrivilegeRoleList.scss
+++ b/src/setting/workSeting/components/WorkPrivilegeRoleList.scss
@@ -1,4 +1,4 @@
-.work-privilege {
+.work-privilege-role {
     padding: var(--thoughtware-padding);
     .ant-tabs-nav:before {
         border-bottom: 0;
